tests/NormalTests/paczka2/big_fuzzy/62933817.err
Error in line 3: nn2swOT3 S699 52,42
Error in line 2: nn2swOT3 S820 29,7
Error in line 6: nn2swOT3 S699 187,4
Error in line 26: LIG24g S699 26,1
Error in line 28: LIG24g S820 17,6
Error in line 33: RvEYc S699 13,2
Error in line 43: S699 A530 19,4
Error in line 49: LIG24g S699 16,2
Error in line 71: Lpvr S820 226,8
Error in line 66: 11h9Ql1v7w A530 99,3
Error in line 52: S699 S378 34,3
Error in line 57: sluZixr S820 184,7
Error in line 82: LIG24g S820 38,93
Error in line 84: Lpvr S699 16,1
Error in line 86: 11h9Ql1v7w S699 -1,9
Error in line 79: sluZixr S378 90,0
Error in line 85: Lpvr S820 86,8
Error in line 74: 11h9Ql1v7w S699 6,6
Error in line 91: sluZixr A530 40,8
Error in line 98: Lpvr S820 85,5
Error in line 83: LIG24g S820 96,5
Error in line 106: RvEYc A530 375,4
Error in line 130: LIG24g S378 52,0
Error in line 135: Lpvr A53T 96,1
Error in line 136: Lpvr A530 459,4
Error in line 121: S699 A530 91,2
Error in line 141: nn2swOT3 S699 64,0
Error in line 139: S699 S820 17,7
Error in line 133: RvEYc S699 98,0
Error in line 157: LIG24g S820 74,41
Error in line 154: 11h9Ql1v7w S378 3,4
Error in line 160: sluZixr S820 60,8
Error in line 164: sluZixr S699 8,9
Error in line 161: LIG24g S378 74,3
Error in line 179: sluZixr S820 E8E,0
Error in line 176: Lpvr S820 15,7
Error in line 171: LIG24g S820 10,2
Error in line 182: 11h9Ql1v7w A530 3,7
Error in line 189: 11h9Ql1v7w S378 9,1
Error in line 166: sluZixr S820 37,7
Error in line 185: Lpvr S820 78,6
Error in line 199: sluZixr S699 65,05
Error in line 198: Lpvr S378 44,8
Error in line 211: LIG24g S699 93,9
Error in line 216: 11h9Ql1v7w S378 36,2
Error in line 226: LIG24g S820 70,0
Error in line 228: sluZixr S699 23,3
Error in line 223: nn2swOT3 A530 30,9
Error in line 232: LIG24g S378 94,3
Error in line 239: LIG24g S820 28,6
Error in line 240: LIG24g S699 87,7
